--- a/web3_tp_final/web3_tp_final/Views/Shared/_Navbar-default.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Shared/_Navbar-default.cshtml
@@ -56,10 +56,10 @@
                                 <a class="nav-link" asp-area="" asp-controller="Pets" asp-action="Index">Mes animaux</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Chat" asp-action="Index">Chat</a>
+                                <a class="nav-link" asp-area="" asp-controller="Chat" asp-action="Index">Clavardage</a>
                             </li>
                             <li>
-                                <a class="nav-link" href="/Users/@user.UserID/Appointments">My Appointments</a>
+                                <a class="nav-link" href="/Users/@user.UserID/Appointments">Rendez-vous</a>
                             </li>
                         }
 
