--- a/web3_tp_final/web3_tp_final/Views/Pets/Create.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Pets/Create.cshtml
@@ -4,12 +4,11 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
-<h4>Pet</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="container w-25">
+    <div class="card p-3">
+        <div class="card-header">
+            <h1>Inscrire</h1>
+        </div>
         <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -37,17 +36,17 @@
             </div>
             <div class="form-group">
                 <label asp-for="Photo"></label>
-                <input type="file" id="photo" name="photo"/>
+                <input type="file" id="photo" name="photo" />
             </div>
-            <div class="form-group">
+            <div class="form-group text-center">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+<div class="text-center">
+    <a asp-action="Index">Retourner à la liste</a>
 </div>
 
 @section Scripts {
