--- a/web3_tp_final/web3_tp_final/Views/Pets/Edit.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Pets/Edit.cshtml
@@ -4,10 +4,11 @@
     ViewData["Title"] = "Modifier";
 }
 
-<h1>Modifier</h1>
-
-<div class="container">
-    <div class="card p-3 bg-neutral-100">
+<div class="container w-25">
+    <div class="card p-3">
+        <div class="card-header">
+            <h1>Modifier</h1>
+        </div>
         <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="PetID" />
@@ -38,15 +39,16 @@
                 <label asp-for="Photo"></label>
                 <input type="file" id="photo" name="photo" multiple="multiple" />
             </div>
-            <div class="form-group">
+            <div class="form-group text-center">
                 <input type="submit" value="Enregistrer" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
-<a asp-action="Index">Retourner à la liste</a>
-
+<div class="text-center">
+    <a asp-action="Index">Retourner à la liste</a>
+</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
