--- a/web3_tp_final/web3_tp_final/wwwroot/css/Details/Details.css
+++ b/web3_tp_final/web3_tp_final/wwwroot/css/Details/Details.css
@@ -2,6 +2,10 @@
     background-color: #f9f9fa
 }
 
+.container {
+    margin-left: 50px;
+}
+
 .padding {
     padding: 3rem !important
 }
@@ -131,3 +135,31 @@ h6 {
         -webkit-transition: all 0.3s ease-in-out;
         transition: all 0.3s ease-in-out
     }
+
+.text-danger[data-color="caramel"] {
+    color: #e09650 !important;
+}
+
+.bouton-size {
+    padding: 25%;
+}
+
+.btn {
+    background-color: #6b3b2b;
+    border: none;
+}
+
+    .btn:hover {
+        background-color: #7f4734;
+    }
+
+.row {
+    margin-right: 0px;
+    margin-left: 0px;
+}
+
+.margin {
+    margin-right: 50px;
+    margin-left: 50px;
+    margin-top: 40px;
+}
