Added Sitters filter and appointment status change

--- a/web3_tp_final/web3_tp_final/Views/FindSitter/Index.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/FindSitter/Index.cshtml
@@ -4,78 +4,42 @@
     <h1>Trouver un gardien</h1>
     <div class="row">
         <div col="12">
+
             <h3>Rechecher un gardien disponible à ces dates:</h3>
-            <form asp-controller="FindSitter" asp-action="FilterByAvailability">
+            <form asp-controller="FindSitter" asp-action="FilterByAvailability" id="FindAvailableSittersFilter">
                 <label>Date début</label>
-                <input type="date" name="startDate" />
+                <input type="datetime-local" name="startDate" id="StartDate"/>
                 <label>Date fin</label>
-                <input type="date" name="endDate" />
+                <input type="datetime-local" name="endDate" id="EndDate"/>
                 <input type="submit" value="Rechercher" />
             </form>
         </div>
-        @foreach (User user in Model)
-        {
-            @if (user.UserID != (int)ViewBag.CurrentUserID)
-            {
-                <div class="col-12 sitter-card my-3" id="Card-User-@user.UserID">
-                    <div class="col-12 sitter-info">
-                        <a asp-controller="Users" asp-action="Details" asp-route-id="@user.UserID">
-                            <div class="col-12" id="User-Overall-Rating">
-                                <div class="row">
-                                    <div class="col-6" id="Sitter-Name">
-                                        @user.UserName
-                                    </div>
-                                    <div class="col-6" id="Overall-Rating">
-                                        <span class="fa-pull-right">
-                                            @for (int i = 0; i < 5; i++)
-                                            {
-                                                if (user.AverageRating() > i)
-                                                {
-                                                    <i class="fas fa-star"></i>
-                                                }
-                                                else
-                                                {
-                                                    <i class="far fa-star"></i>
-                                                }
-                                            }
-                                        </span>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    @foreach(Appointment appointment in user.Appointments.Take(2))
-                    {
-                        @if (appointment.Reviews.Any()) 
-                        {
-                            <div class="col-12 preview-review-row">
-                                <div class="row">
-                                    <div class="col-4">
-                                        @appointment.Review().User.UserName
-                                        @for (int i = 0; i < 5; i++)
-                                        {
-                                            if (appointment.Review().Stars > i)
-                                            {
-                                                <i class="fas fa-star"></i>
-                                            }
-                                            else
-                                            {
-                                                <i class="far fa-star"></i>
-                                            }
-                                        }
-                                    </div>
-                                    <div class="col-8 text-center">
-                                        @appointment.Review().Comment
-                                    </div>
-                                </div>
-                            </div>
-                        }
-                    }
-                </div>
-            }
-        }
+        <div class="col-12" id="AvailableSittersList">
+
+            @await Html.PartialAsync("_AvailableSittersList", Model)
+        </div>
 </div>
 
 <script>
     $('#website-body').addClass('website-background');
+
+    $('#FindAvailableSittersFilter').submit(function (e) {
+
+        e.preventDefault();
+        $('#AvailableSittersList').fadeOut("500", function () {
+            $.ajax({
+                url: '/FindSitter/FilterByAvailability',
+                type: 'get',
+                dataType: 'html',
+                data: {
+                    startDate: $('#StartDate').val(),
+                    endDate: $('#EndDate').val()
+                },
+                success: function (data) {
+                    $('#AvailableSittersList').fadeIn("500");
+                    $('#AvailableSittersList').html(data);
+                }
+            });
+        });
+    });
 </script>
