--- a/web3_tp_final/web3_tp_final/Views/FindSitter/Index.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/FindSitter/Index.cshtml
@@ -2,17 +2,32 @@
 
 <div class="container pt-3">
     <h1>Trouver un gardien</h1>
-    <div class="row">
-        <div col="12">
-
-            <h3>Rechecher un gardien disponible à ces dates:</h3>
-            <form asp-controller="FindSitter" asp-action="FilterByAvailability" id="FindAvailableSittersFilter">
-                <label>Date début</label>
-                <input type="datetime-local" name="startDate" id="StartDate"/>
-                <label>Date fin</label>
-                <input type="datetime-local" name="endDate" id="EndDate"/>
-                <input type="submit" value="Rechercher" />
-            </form>
+    <div class="row mt-3">
+        <div class="col-12">
+            <h3 class="mb-0">Rechecher un gardien disponible à ces dates:</h3>
+            <div class="col-12 sap-card-header sap-card-header-round">
+                <form asp-controller="FindSitter" asp-action="FilterByAvailability" id="FindAvailableSittersFilter">
+                    <div class="col-12 row">
+                        <div class="col-6 text-center">
+                            <label>Date début</label>
+                        </div>
+                        <div class="col-6 text-center">
+                            <label>Date fin</label>
+                        </div>
+                    </div>
+                    <div class="col-12 row">
+                        <div class="col-6 form-group">
+                            <input type="datetime-local" name="startDate" id="StartDate" class="form-control"/>
+                        </div>
+                        <div class="col-6 form-group">
+                            <input type="datetime-local" name="endDate" id="EndDate"  class="form-control"/>
+                        </div>
+                    </div>
+                    <div class="col-12 text-center">
+                        <input type="submit" value="Rechercher" class="sap-submit"/>
+                    </div>
+                </form>
+            </div>
         </div>
         <div class="col-12" id="AvailableSittersList">
 
