--- a/web3_tp_final/web3_tp_final/Views/Chat/Index.cshtml
+++ b/web3_tp_final/web3_tp_final/Views/Chat/Index.cshtml
@@ -3,14 +3,17 @@
     ViewData["Title"] = "Chat";
     var sender = ViewBag.sender;
     var receiver = ViewBag.receiver;
+
 }
-<h1><h1 id="senderUserName">@sender.UserName</h1>Chat avec: @receiver.UserName</\h1><h1 id="receiverId">@receiver.UserID</h1>
+<h1>Chat avec: @receiver.UserName</h1>
 
 <div class="container">
     <div class="row">&nbsp;</div>
     <div class="row">
-        <input type="text" id="senderInput" value="@sender.UserName" style="visibility:visible" enabled />
-        <input type="text" id="receiverInput" value="@receiver.UserID" style="visibility:visible" enabled/>
+        <input type="text" id="senderInput" value="@sender.UserName" style="visibility:visible" readonly="true" />
+        <input type="text" id="senderId" value="@sender.UserID" style="visibility:visible" readonly="true" />
+        <input type="text" id="receiverInput" value="@receiver.UserID" style="visibility:visible" readonly="true" />
+        <input type="text" id="userChat" value="@receiver.UserName" style="visibility:visible" readonly="true" />
     </div>
 </div>
 
@@ -36,5 +39,42 @@
         <ul id="messagesList"></ul>
     </div>
 </div>
+ <div class="row">
+    <div class="col-6">
+        <ul id="historique"></ul>
+    </div>
+ </div>
+
 <script src="~/js/signalr/dist/browser/signalr.js"></script>
 <script src="~/js/chat.js"></script>
+
+<script>
+    var id = document.getElementById("senderId").value
+    var currentUsername = document.getElementById("senderInput").value
+    var receiverUsername = document.getElementById("userChat").value
+    var url = "https://localhost:44308/api/Messages/" + id
+    var xhttp = new XMLHttpRequest();
+    xhttp.onreadystatechange = function () {
+        if (this.readyState == 4 && this.status == 200) {
+            var divReponse = document.getElementById("historique");
+            divReponse.innerHTML = ""
+            var reponse = this.responseText;
+            var tableauReponse = JSON.parse(reponse);
+            var texte = document.createElement("p");
+
+            for (i in tableauReponse) {
+
+                if (tableauReponse[i].sender == id) {
+                    texte.innerHTML += "<ul style='list-style-type:none'> <li>" + currentUsername +" said " + tableauReponse[i].content + "</li><li> Date : " + tableauReponse[i].timeStamp + "</li></ul>"
+                }
+                if (tableauReponse[i].recipient == id) {
+                    texte.innerHTML += "<ul style='list-style-type:none'> <li>" + receiverUsername + " said " + tableauReponse[i].content + "</li><li> Date : " + tableauReponse[i].timeStamp + "</li></ul>"
+
+                }
+            }
+            divReponse.appendChild(texte);
+        }
+    };
+    xhttp.open("GET", url, true);
+    xhttp.send();
+</script>
